gobmkida/g2/recognize_eye
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/recognize_eye/src/engine/optics.c:1766:9: error: use of undeclared identifier 'byte_A5197F'
while ( byte_A5197F[v29] ); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/recognize_eye/src/engine/optics.c:1805:7: error: use of undeclared identifier 'byte_A5197F'
if ( !byte_A5197F[++v38] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/recognize_eye/src/engine/optics.c:1867:9: error: use of undeclared identifier 'byte_A5197F'
while ( byte_A5197F[v48] ); 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/recognize_eye/src/obj/1/optics.o] Error 1
